--- a/app/Resources/views/index/index.html.twig
+++ b/app/Resources/views/index/index.html.twig
@@ -8,18 +8,9 @@
     <!-- Remove Tap Highlight on Windows Phone IE -->
     <meta name="msapplication-tap-highlight" content="no"/>
 
-    <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
-
-    <title>Altair Admin v2.12.0 - Login Page</title>
-
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet' type='text/css'>
-
-    <!-- uikit -->
-    <link rel="stylesheet" href="bower_components/uikit/css/uikit.almost-flat.min.css"/>
-
-    <!-- altair admin login page -->
-    <link rel="stylesheet" href="assets/css/login_page.min.css" />
+    <link rel="stylesheet" href="{{ asset('assets/plugins/uikit/css/uikit.almost-flat.min.css')}}"/>
+    <link rel="stylesheet" href="{{ asset('assets/css/main.min.css')}}" media="all"/>
+    <link rel="stylesheet" href="{{ asset('assets/css/login_page.min.css')}}" media="all"/>
 
 </head>
 <body class="login_page">
@@ -30,17 +21,17 @@
             <div class="login_heading">
                 <div class="user_avatar"></div>
             </div>
-            <form>
+            <form action="login" method="post">
                 <div class="uk-form-row">
                     <label for="login_username">Username</label>
-                    <input class="md-input" type="text" id="login_username" name="login_username" />
+                    <input class="md-input" type="text" id="login_username" name="username" />
                 </div>
                 <div class="uk-form-row">
                     <label for="login_password">Password</label>
-                    <input class="md-input" type="password" id="login_password" name="login_username" />
+                    <input class="md-input" type="password" id="login_password" name="password" />
                 </div>
                 <div class="uk-margin-medium-top">
-                    <a href="index.html" class="md-btn md-btn-primary md-btn-block md-btn-large">Sign In</a>
+                    <button   class="md-btn md-btn-primary md-btn-block md-btn-large">Sign In</button>
                 </div>
                 <div class="uk-grid uk-grid-width-1-3 uk-grid-small uk-margin-top">
                     <div><a href="login.html#" class="md-btn md-btn-block md-btn-facebook" data-uk-tooltip="{pos:'bottom'}" title="Sign in with Facebook"><i class="uk-icon-facebook uk-margin-remove"></i></a></div>
@@ -79,14 +70,14 @@
         <div class="md-card-content large-padding" id="register_form" style="display: none">
             <button type="button" class="uk-position-top-right uk-close uk-margin-right uk-margin-top back_to_login"></button>
             <h2 class="heading_a uk-margin-medium-bottom">Create an account</h2>
-            <form>
+            <form action="" method="POST">
                 <div class="uk-form-row">
                     <label for="register_username">Username</label>
-                    <input class="md-input" type="text" id="register_username" name="register_username" />
+                    <input class="md-input" type="text" id="register_username" name="username" />
                 </div>
                 <div class="uk-form-row">
                     <label for="register_password">Password</label>
-                    <input class="md-input" type="password" id="register_password" name="register_password" />
+                    <input class="md-input" type="password" id="register_password" name="password" />
                 </div>
                 <div class="uk-form-row">
                     <label for="register_password_repeat">Repeat Password</label>
@@ -106,7 +97,6 @@
         <a href="login.html#" id="signup_form_show">Create an account</a>
     </div>
 </div>
-
 <!-- common functions -->
 <script src="assets/js/common.min.js"></script>
 <!-- uikit functions -->
@@ -136,5 +126,7 @@
     ga('create', 'UA-65191727-1', 'auto');
     ga('send', 'pageview');
 </script>
+</body>
+</html>
 </body>
 </html>
